most of iteration three working

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,6 @@
 
 <% if current_user %>
  <%= link_to 'New Task List', '/tasklists/new' %>
+ <%= link_to 'Current Task Lists', '/tasklists' %>
+
 <% end %>
