--- a/app/views/tasklists/index.html.erb
+++ b/app/views/tasklists/index.html.erb
@@ -1,8 +1,12 @@
-<%= link_to 'Home', '/' %>
+<%= link_to 'Home', '/' %><br><br>
 
+<%= link_to 'New Tasklist', '/tasklists/new' %>
 
-<% @tasklists.each do |list| %>
-  <h3><%= list.title %></h3>
-  <p><%= list.description %></p>
-  <p><%= list.created_at %></p>
+<% if current_tasklist %>
+  <% @tasklists.each do |list| %>
+    <h3><%= list.title %></h3>
+    <p><%= list.description %></p>
+    <p><%= list.created_at %></p>
+    <%= link_to 'Current Tasks', '/tasks' %>
+  <% end %>
 <% end %>
