--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,7 +1,6 @@
 <h3>New Task</h3>
 <%= form_for :task, url: '/tasks' do |f| %>
-  Title: <%= f.text_field :title %>
-  Status<%= f.text_field :status %><br>
+  Title: <%= f.text_field :title %><br>
   Start Date<%= f.date_select :start_date %><br>
   Due Date<%= f.date_select :due_date %>><br>
   Notes<%= f.text_area :notes %><br>
