--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,9 +1,8 @@
-<%= link_to 'Home', '/' %>
 <%= link_to 'Task Lists', '/tasks' %>
 
 
 <h3><%= @task.title %></h3>
-<h6><%= @task.status %></h6>
+<h6>Completed: <%= check_box_tag "complete", @task.status, :false %></h6>
 <h6><%= @task.due_date %></h6>
 <h6><%= @task.start_date %></h6>
 <h6><%= @task.notes %></h6>
