--- a/app/views/tasklists/show.html.erb
+++ b/app/views/tasklists/show.html.erb
@@ -1,4 +1,5 @@
 <h3><%= @tasklist.title %></h3>
 <h6><%= @tasklist.description %></h6>
 
-<%= link_to 'New Task', '/tasks/new' %>
+<%= link_to 'New Task', '/tasks/new' %><br>
+<%= link_to 'Current Tasks', '/tasklists' %>
