--- a/app/views/tasklists/show.html.erb
+++ b/app/views/tasklists/show.html.erb
@@ -2,4 +2,4 @@
 <h6><%= @tasklist.description %></h6>
 
 <%= link_to 'New Task', '/tasks/new' %><br>
-<%= link_to 'Current Tasks', '/tasklists' %>
+<%= link_to 'Back to Tasklists', '/tasklists' %>
