task list viewing updated

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h3>Final Assessment Home</h3>
 
 <% if current_user %>
- <%= link_to 'New Task List', '/tasklists/new' %>
+ <%= link_to 'New Task List', '/tasklists/new' %><br>
  <%= link_to 'Current Task Lists', '/tasklists' %>
 
 <% end %>
