--- a/app/views/tasklists/show.html.erb
+++ b/app/views/tasklists/show.html.erb
@@ -1,5 +1,11 @@
 <h3><%= @tasklist.title %></h3>
 <h6><%= @tasklist.description %></h6>
 
+<% @tasks.each do |task| %>
+  <% if task.tasklist_id == @tasklist.id %>
+    <h4><%= link_to task.title, task_path(task) %></h4>
+  <% end %>
+<% end %>
+
 <%= link_to 'New Task', '/tasks/new' %><br>
 <%= link_to 'Back to Tasklists', '/tasklists' %>
