--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 <br><%= link_to 'Back to Tasklist', '/tasklists' %>
 <br><%= link_to 'New Task', '/tasks/new' %>
 <% if current_user %>
-  <% @tasks.map do |task| %>
+  <% @tasks.each do |task| %>
     <% if task.tasklist_id == current_user.tasklists.first.id %>
       <h3><%= link_to task.title, task_path(task.id) %></h3>
     <% end %>
