--- a/app/views/tasklists/new.html.erb
+++ b/app/views/tasklists/new.html.erb
@@ -1,6 +1,6 @@
 <h3>New Task List</h3>
 <%= form_for :tasklist, url: '/tasklists' do |f| %>
-  <%= f.text_field :title %>
-  <%= f.text_field :description %>
+  Tasklist Name: <%= f.text_field :title %><br>
+  Tasklist Description: <%= f.text_field :description %><br>
   <%= f.submit %>
 <% end %>
