--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <h3>Sign Up</h3>
+<%= link_to 'Home', '/' %>
 <%= form_for :user, url: '/users' do |f| %>
   <%= f.text_field :email %>
   <%= f.password_field :password %>
