--- a/app/views/tasklists/show.html.erb
+++ b/app/views/tasklists/show.html.erb
@@ -4,7 +4,8 @@
 <% @tasks.each do |task| %>
   <% if task.tasklist_id == @tasklist.id %>
     <li>
-      <%= check_box_tag task.status %><%= link_to task.title, task_path(task) %>
+      <%= check_box_tag task.status %><%= link_to task.title, task_path(task), class: "taskItems" %>
+      <hr>
     </li>
   <% end %>
 <% end %>
